# LapaceX

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
cpp/include/laplacex/: core.hpp  critical.hpp  utils.hpp
cpp/src/: bindings.cpp  core.cpp  critical.cpp  utils.cpp
examples/: quickstart.py
src/laplacex/: __init__.py  api.py  components.py  transform.py
tests/: conftest.py  test_laplacex.py
